# cronosII

./: AUTHORS  ChangeLog  FEATURES  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-developers.Changelog  THANKS  TODO  TODO_RELEASE  aclocal.m4  config.h.in  configure  configure.in  cronosII-config.in  cronosII.spec.in  gnome-text.h
doc/: Makefile.in
doc/C/: Makefile  Makefile.am  Makefile.in  accounts.sgml  authors.sgml  bugs.sgml  cronosII.sgml  fake0.css  gtk-brief.sgml  latest.sgml  plugins.sgml  shortcuts_table.sgml
doc/C/cronosII/: addressbook-final.html  book1.html  f11.html  gtk.html  latest.html  plugins.html
images/: Makefile.in
man/: Makefile.am  Makefile.in  c2addrbook.1  cronos.1  cronosII-config.1
pixmaps/: Makefile.am  Makefile.in
plugins/: ChangeLog  Makefile.am  Makefile.in  README  plugin.html
plugins/c2filters-0.4.5patch1/: Changelog  Makefile  README  filters.c
plugins/fortune/: AUTHORS  ChangeLog  Makefile  README  fortune.c
plugins/headers/: README  account.h  init.h  mailbox.h  main.h  message.h  plugin.h  search.h  utils.h
plugins/nohtml/: Changelog  Makefile  README  nohtml.c
plugins/sample/: ChangeLog  ChangeLogette  Makefile  README  sample.c
po/: POTFILES.in  br.po  cat-id-tbl.c  cronosII.pot  de.po  es.po  fr.po  it.po
src/: Makefile.am  Makefile.in  account.c  account.h  addrbook.c  addrbook.h  autocompletition.c  autocompletition.h  bin-addrbook.c  check.c  check.h  cronosII.h  debug.h  error.c  error.h  exit.c  exit.h  gnomefilelist.c  gnomefilelist.h  gui-about.c  gui-about.h  gui-addrbook.c  gui-addrbook.h  gui-composer.c  gui-composer.c.c  gui-composer.h  gui-decision_dialog.c  gui-decision_dialog.h  gui-export.c  gui-export.h  gui-import.c  gui-import.h  gui-logo.c  gui-logo.h  gui-mailbox_tree.c  gui-mailbox_tree.h  gui-preferences.c  gui-preferences.h  gui-print.c  gui-print.h  (+42 more)
src/xpm/: drafts.xpm  folder.xpm  forward.xpm  mark.xpm  outbox.xpm  read.xpm  reply.xpm  unread.xpm
