SUBDIRS = intl po src images pixmaps doc man plugins

bin_SCRIPTS = cronosII-config

plugindir = $(pkgdatadir)/plugins
plugin_DATA =

cronosincludedir = $(includedir)/cronosII
cronosinclude_HEADERS = config.h

EXTRA_DIST =		\
	cronosII.spec	\
	cronosII.desktop	\
	cronosII-gmc.desktop	\
	cronosII.spec	\
	AUTHORS \
	COPYING \
	FEATURES \
	NEWS \
	README \
	TODO \
	ChangeLog \
	cronosII.spec \
	cronosII.desktop

Internetdir = $(datadir)/gnome/apps/Internet
Internet_DATA = cronosII.desktop
GMCdir = $(datadir)/mc/templates
GMC_DATA = cronosII-gmc.desktop
