EXTRA_DIST = plugin.html \
	sample/Makefile \
	sample/sample.c \
	fortune/Makefile \
	fortune/fortune.c \
	fortune/ChangeLog \
	fortune/README \
	fortune/fortune.o \
	fortune/fortune.so \
	c2filters-0.4.5pre1/Changelog \
	c2filters-0.4.5pre1/Makefile \
	c2filters-0.4.5pre1/README \
	c2filters-0.4.5pre1/filters.c \
	c2filters-0.4.5pre1/filters.o \
	c2filters-0.4.5pre1/filters.so
