
EXTRA_DIST = plugin.html \
	sample/MakefileORIG \
	sample/sample.c \
	sample/sample.o \
	sample/sample.so \
	sample/README \
	sample/ChangeLogette \
	README \
	ChangeLog \
	c2filters-0.4.5patch1/MakefileORIG \
	c2filters-0.4.5patch1/filters.so \
	c2filters-0.4.5patch1/filters.c \
	c2filters-0.4.5patch1/filters.o \
	c2filters-0.4.5patch1/README \
	c2filters-0.4.5patch1/Changelog \
	fortune/AUTHORS \
	fortune/ChangeLog \
	fortune/MakefileORIG \
	fortune/README \
	fortune/fortune.c \
	fortune/fortune.o \
	fortune/fortune.so





