


EXTRA_DIST = plugin.html \
	README \
	ChangeLog \
	Makefile.am \
	Makefile \
	fortune/AUTHORS \
	fortune/ChangeLog \
	fortune/Makefile \
	fortune/README \
	fortune/fortune.c \
	sample/ChangeLog \
	sample/Makefile \
	sample/README \
	sample/sample.c \
	c2filters-0.4.5patch1/Changelog \
	c2filters-0.4.5patch1/README \
	c2filters-0.4.5patch1/filters.c \
	c2filters-0.4.5patch1/Makefile \
	nohtml/Changelog \
	nohtml/Makefile \
	nohtml/README \
	nohtml/nohtml.c \
	headers/account.h \
	headers/init.h \
	headers/mailbox.h \
	headers/main.h \
	headers/message.h \
	headers/plugin.h \
	headers/search.h \
	headers/utils.h \
	headers/README 
